--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="stylesheet" href="%sveltekit.assets%/css/fonts.css"  />
+		<link rel="stylesheet" href="%sveltekit.assets%/css/fonts.scss"  />
+		<link rel="stylesheet" href="%sveltekit.assets%/css/variables_and_mixins.scss"  />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
